--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://crispy-down.github.io
 avatar: /avatar.jpeg
 paginate: 5
 permalink: pretty
-cover_image: /bg.jpeg
+cover_image: /Users/user/Pictures/81272784_1569833769327_1_600x600 (1).jpg
 
 # Gems
 plugins:
