--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Setup
 title: Crispy's Code Singularity
-description: <font color='dodgerblue'> **do not be the one who blame oneself.** </font>
+description: <font color='dodgerblue'> do not be the one who blame oneself. </font> 
 url: https://crispy-down.github.io
 avatar: /assets/avatar2.png
 paginate: 5
 permalink: pretty
-cover_image: /assets/wall.jpg
+cover_image: /assets/wall231.jpg
 
 # Gems
 plugins:
