--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title: <font color = 'OrangeRed'> Crispy's Code Singularity </font>
-description: <font color='OrangeRed'> do not be the one who blame oneself. </font> 
+title: <font color = 'MediumSlateBlue'> Crispy's Code Singularity </font>
+description: <font color='MediumSlateBlue'> 코딩은 잘 못해요.. </font> 
 url: https://crispy-down.github.io
 avatar: /assets/avatar2.png
 paginate: 5
