--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title: <font color = 'MediumSlateBlue'> Crispy's Code Singularity </font>
-description: <font color='MediumSlateBlue'> 코딩은 잘 못해요.. </font> 
+title: <font color = 'LightSlateGray'> Crispy's Code Singularity </font>
+description: <font color='LightSlateGray'> 코딩은 잘 못해요.. </font> 
 url: https://crispy-down.github.io
 avatar: /assets/avatar2.png
 paginate: 5
