--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ sass:
 # google_analytics: UA-000000-0
 
 # Replace this value and uncomment to enable Disqus
-disqus: https://disqus.com/by/disqus_VBwOekzsOI/
+disqus: crispycode.disqus.com 
 
 
 
