--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: <font color = 'Black'> Crispy's Code Singularity </font>
-description: <font color='Black'> 코딩은 잘 못해요.. </font> 
+description: <font color='Black'> 어제의 나보다 나은 내가 되자 </font> 
 url: https://crispy-down.github.io
 avatar: /assets/avatar2.png
 paginate: 5
