--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: <font color = 'Black'> Crispy's Code Singularity </font>
 description: <font color='Black'> 어제의 나보다 나은 내가 되자 </font> 
 url: https://crispy-down.github.io
+baseurl : ""
 avatar: /assets/avatar2.png
 paginate: 5
 permalink: pretty
