--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title: <font color = 'Black'> Crispy's Code Singularity </font>
-description: <font color='Black'> 어제의 나보다 나은 내가 되자 </font> 
+title: <font color = 'MediumSpringGreen'> Crispy's Code Singularity </font>
+description: <font color='MediumSpringGreen'> 많이 부족해도 한 걸음씩 </font> 
 url: https://crispy-down.github.io
 baseurl : ""
 avatar: /assets/avatar2.png
