--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: <font color = 'MediumSpringGreen'> Crispy's Code Singularity </font>
-description: <font color='MediumSpringGreen'> 많이 부족해도 한 걸음씩 </font> 
+description: <font color='MediumSpringGreen'> Reminisce </font> 
 url: https://crispy-down.github.io
 baseurl : ""
 avatar: /assets/avatar2.png
